<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    android:orientation="vertical"
    android:padding="@dimen/main_layout_padding">

    <LinearLayout
        android:id="@+id/textviewAboutDencrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/main_layout_padding"
        android:paddingRight="@dimen/main_layout_padding"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/about"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="@dimen/heading_font_size"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textviewAboutDencrypt"
        android:layout_centerHorizontal="true"
        android:text="@string/version" />

    <TextView
        android:id="@+id/textviewMyEmail"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/my_email"
        android:textColor="@color/blue" />

    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textviewMyEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/my_nickname"
        android:textStyle="bold" />
</RelativeLayout>