<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecryptActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWindowBackground"
        android:orientation="vertical"
        android:padding="@dimen/main_layout_padding">

        <TextView
            android:id="@+id/textviewDecryption"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/decrypt" />

        <LinearLayout
            android:id="@+id/decryptLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textviewDecryption"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:labelFor="@+id/edittextArea"
                android:text="@string/text" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:onClick="pasteContent"
                android:padding="2dp"
                android:text="@string/paste" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:padding="2dp"
                android:onClick="clearContent"
                android:text="@string/clear" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:padding="2dp"
                android:onClick="copyContent"
                android:text="@string/copy" />
        </LinearLayout>

        <EditText
            android:id="@+id/edittextArea"
            style="@style/Base.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/decryptLinearLayout"
            android:background="@drawable/textarea_bg"
            android:elevation="5dp"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="12"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonDecrypt"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="decryptText"
            android:text="@string/decrypt" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>